[project]
name = "litdata-with-minio"
version = "0.2.0"
description = "A demonstration of using Lightning AI's LitData with a MinIO S3-compatible object store."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bhimraj Yadav", email = "bhimrajyadav977@gmail.com" }]
dependencies = ["awscli", "litdata", "numpy", "pillow", "python-dotenv"]
